--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint src",
     "test": "jest",
     "test:watch": "yarn test --watch",
+    "generate": "yarn plop --plopfile ./generators/plopfile.js",
     "storybook": "start-storybook -s ./public -p 6006",
     "build-storybook": "build-storybook -s ./public"
   },
@@ -44,6 +45,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
+    "plop": "^2.7.4",
     "prettier": "2.2.1",
     "style-loader": "^2.0.0",
     "typescript": "^4.2.4",
